# claude-puppet

./: .gitignore  LICENSE  README.md  pyproject.toml
dashboard/: README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
dashboard/server/: audit.ts  auth.ts  index.ts  mcp-client.ts  pty-coalesce.ts  screen-poller.ts  state-db.ts  tail.ts  transcript-stream.ts  tsconfig.json  types.ts  watcher.ts
dashboard/web/: App.tsx  control.ts  index.css  index.html  main.tsx  settings.ts  store.ts  tsconfig.json  types.ts  ws.ts
dashboard/web/components/: ActivityHeatmap.tsx  FocusedSession.tsx  FocusedSessionImpl.tsx  Header.tsx  MasterSidebar.tsx  MasterViewPanel.tsx  PermissionAlert.tsx  (+8 more)
docs/: architecture.md
examples/: README.md  demo-fizzbuzz.md  master-mcp-config-http.json  master-mcp-config.json
hooks/: puppet-drain.sh  puppet-flush.sh  puppet-peek.sh
pty-bridge/: package-lock.json  package.json  tsconfig.json
pty-bridge/src/: index.ts  keys.ts  protocol.ts  session.ts  snapshot.ts
scripts/: claude-puppet-dashboard.service  claude-puppet-mcp.service  install-services.sh  install.sh
server/: __main__.py  bridge.py  classify.py  db.py  lifecycle.py  log.py  mcp_server.py  protocol.py  screen.py  sessions.py
skill/: SKILL.md
tests/: test_append_only.py  test_classify.py  test_db.py  test_drain_events.py  test_keys_vocab.py  test_mcp_validation.py  test_nested.py  test_protocol_framing.py  test_screen.py  test_screen_dedup.py  test_swarm.py  test_token_opts.py
tests/e2e/: conftest.py  test_drive_dummy_tui.py
(+3 files in other folders)
