[project]
name = "claude-puppet"
version = "0.1.0"
description = "MCP server: drive a slave `claude` CLI through a PTY as if you were a human at a terminal"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27",
    "anyio>=4.6",
    "structlog>=24.4",
]

[project.scripts]
claude-puppet = "server.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-anyio>=0.0.0; python_version < '0'",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
